--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.found-falcone{
+  text-align: center;
+}
